tdf#141463 avoid skew in shape group in ooxml import ..

and implement special resize handling for rotation angles larger 45deg.
This solves tdf#93952 and tdf#141953 too.

Change-Id: I798f6d2cea29c4a5285f530e9cf7bb10e7f6c41d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115296
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>